# autoconda

./: .gitignore  CONTRIBUTING.md  README.md  autoconda.py  environment.yml  pyproject.toml
.github/workflows/: tests.yml
src/autoconda/: __init__.py  cli.py  conda.py  environment.py
tests/: test_cli.py  test_environment.py
