[project]
name = "autoconda"
version = "0.4.1"
readme = "README.md"
authors = [
    { name = "Gediminas Zlatkus", email = "gediminas.zlatkus@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
]

[project.scripts]
autoconda = "autoconda:main"

[dependency-groups]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
